k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devlife
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /auth
        backend:
          service:
            name: auth-service
            port:
              number: 80
